--- a/Aadhava/slotapp/static/slot.html
+++ b/Aadhava/slotapp/static/slot.html
@@ -1,40 +1,10 @@
-# Ex02 Time Table
-## Date: 28.11.2025
-
-## AIM
-To write a html webpage page to display your slot timetable.
-
-## ALGORITHM
-### STEP 1
-Create a Django-admin Interface.
-
-### STEP 2
-Create an App inside the Django project.
-
-### STEP 2
-Create a static folder uder the created App and insert HTML code.
-
-### STEP 3
-Create a simple table using ```<table>``` tag in html with the relevant attributes.
-
-### STEP 4
-Add rows using ```<tr>``` tag.
-
-### STEP 5
-Add your course schedule using ```<td>``` tag.
-
-### STEP 6
-Execute the program using runserver command.
-
-## PROGRAM
-```
 <html>
  <head>
   <title> Slot Timetable </title>
  </head>
  <body>
     <center>
-        <img src=" " height="100" width="500">
+        <img src="logo.png" height="100" width="500">
     </center>
   <h1 align="center">SLOT TIME TABLE - AADHAVAN NAGARAJAN M (25011373)</h1>
   <table border="4" cellpadding="15" cellspacing="3" align="center">
@@ -108,13 +78,3 @@ Execute the program using runserver command.
  </table>
 </body>
 </html>
-```
-
-
-## OUTPUT
-
-![alt text](<Screenshot (67).png>)
-
-
-## RESULT
-The program for creating slot timetable using basic HTML tags is executed successfully.
